# experiment

devel/: .catkin  .rosinstall  _setup_util.py
devel/include/viconros/: uam_init_Config.h  vicon_cfgConfig.h  viconmocap.h
devel/lib/offb_posctl/: offb_posctl  test
devel/lib/pkgconfig/: offb_posctl.pc  viconros.pc
devel/lib/viconros/: viconros
devel/share/offb_posctl/cmake/: offb_posctl-msg-paths.cmake  offb_posctlConfig.cmake
devel/share/offb_posctl/docs/: offb_Config-usage.dox  offb_Config.dox
devel/share/viconros/cmake/: viconrosConfig.cmake
devel/share/viconros/docs/: uam_init_Config-usage.dox  uam_init_Config.dox  uam_init_Config.wikidoc  vicon_cfgConfig-usage.dox  vicon_cfgConfig.dox  (+1 more)
src/offb_posctl/: CMakeLists.txt  package.xml
src/offb_posctl/cfg/: offb_cfg.cfg
src/offb_posctl/data/: OG.csv  line.csv  screw.csv
src/offb_posctl/launch/: offb_posctl_vicon.launch
src/offb_posctl/log/: line_2021-04-13-14-26-49.bag
src/offb_posctl/log/0411/: OG_1.bag  OG_2.bag  line_2.bag  screw_1.bag  screw_2.bag
src/offb_posctl/msg/: controlstate.msg
src/offb_posctl/param/: hgj.yaml  px4_1127param.params  px4_210cupparam.params  px4_210cupparamaggroll.params
src/offb_posctl/scripts/: pos_ref_vicon.py
src/offb_posctl/src/: FILTER.cpp  FILTER.h  PID.cpp  PID.h  Parameter.cpp  Parameter.h  offb_posctl.cpp  offb_posctl_1.cpp  offb_posctl_vicon.cpp  param  test.cpp
src/viconros/: CMakeLists.txt
src/viconros/cfg/: vicon_cfg.cfg
src/viconros/launch/: aggressivecup300.launch  viconros.launch
src/viconros/src/: CFetchViconData.cpp  viconros.cpp
(+9 files in other folders)
